--- a/HalfIndex1.html
+++ b/HalfIndex1.html
@@ -87,26 +87,33 @@
         <div class="simple-text">Скачать игру:</div>
 
         <div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Build_0.1.rar.torrent" download class="download-link">
-                Stranded Fishing VI 0.1
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/HalfBuild_1.rar" download class="download-link">
+                Half Dagger 0.1
+            </a>
+        </div>
+		
+		<div class="download">
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/HalfBuild_2.rar" download class="download-link">
+                Half Dagger 0.2
+            </a>
+        </div>
+		
+		<div class="download">
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/HalfBuild_3.rar" download class="download-link">
+                Half Dagger 0.3
             </a>
         </div>
 
-        <a href="RybalkaIndex2.html">Страница Stranded Fishing VI build 0.2</a>
-
         <div class="simple-text"><p>О нашей игре:</p></div>
 
-        <div class="simple-text">Красивые виды</div>
-        <img src="static/images/img1.png">
+        <div class="simple-text">Скрытый сюжет</div>
+        <img src="static/images/HalfDagger.png">
 
-        <div class="simple-text">Проработанные модели</div>
-        <img src="static/images/img2.png">
+        <div class="simple-text">Реалистичные бои</div>
+        <img src="static/images/HalfDagger_1.png">
 
-        <div class="simple-text">Проработанная физика</div>
-        <img src="static/images/img3.png">
-
-        <div class="simple-text">Глубокий сюжет</div>
-        <img src="static/images/img4.png">
+        <div class="simple-text">Реалистичные бои</div>
+        <img src="static/images/HalfDagger_2.png">
 
         <div class="text-small">
             При поддержке ООО Mural Game Soft.
