--- a/HalfIndex1.html
+++ b/HalfIndex1.html
@@ -112,7 +112,7 @@
         <div class="simple-text">Реалистичные бои</div>
         <img src="static/images/HalfDagger_1.png">
 
-        <div class="simple-text">Реалистичные бои</div>
+        <div class="simple-text">Очень реалистичные бои</div>
         <img src="static/images/HalfDagger_2.png">
 
         <div class="text-small">
