--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <ul class="game-list">
             <li><a href="RybalkaIndex1.html">Stranded Fishing VI</a></li>
             <li><a href="HalfIndex1.html">Half Dagger</a></li>
+			<li><a href="GroonIndex_0.1.html">Project Groon</a></li>
         </ul>
         
         <div>
