--- a/victoBuilds.html
+++ b/victoBuilds.html
@@ -22,7 +22,7 @@
 		<br>
 	</div>
 	<div class="download">
-        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/victoBuild.rar" download class="download-link">
+        <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/victoBuild.rar.torrent" download class="download-link">
             Stranded Fishing VI VictoBuild
         </a>
     </div>
