--- a/RybalkaIndex2.html
+++ b/RybalkaIndex2.html
@@ -93,6 +93,8 @@
         </div>
 
         <a href="RybalkaIndex1.html">Страница Stranded Fishing VI build 0.1</a>
+		<br>
+		<a href="RybalkaIndex3.html">Страница Stranded Fishing VI build 0.3</a>
 
         <div class="simple-text"><p>О нашей игре:</p></div>
 
