--- a/GroonIndex_0.1.html
+++ b/GroonIndex_0.1.html
@@ -87,20 +87,20 @@
         <div class="simple-text">Скачать игру:</div>
 
         <div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Groon_0.1.rar" download class="download-link">
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/Groon_0.1.rar" download class="download-link">
                 Project Groon 0.1
             </a>
         </div>
 
         <div class="simple-text"><p>О нашей игре:</p></div>
 
-        <div class="simple-text">Красивыые виды</div>
+        <div class="simple-text">Проработанные локации</div>
         <img src="static/images/GroonBuild_img1.png">
 
         <div class="simple-text">Быстрый геймплей</div>
         <img src="static/images/GroonBuild_img2.png">
 
-        <div class="simple-text">Скрытый сюжет</div>
+        <div class="simple-text">Глубокий сюжет</div>
         <img src="static/images/GroonBuild_img3.png">
 
         <div class="text-small">
