--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
             font-family: 'Scabber';
         }
         
-        /* Стили для списка */
         .game-list {
-            list-style-type: none; /* Убираем стандартные маркеры */
+            list-style-type: none;
             padding: 0;
             margin: 20px 0;
         }
