--- a/obama.html
+++ b/obama.html
@@ -18,15 +18,19 @@
 		    font-size: 30px;
 		}
 		.img-people {
-            width: 100%;
+            max-width: 100%;
+            height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
             margin: 20px 0;
         }
         .img-people img {
-            display: block;
-        }
+			display: block;
+			width: 80%; /* или конкретное значение в px */
+			max-width: 850px; /* максимальная ширина */
+			height: auto; /* сохраняет пропорции */
+		}
 	</style>
 </head>
 <body>
@@ -79,7 +83,7 @@
     </div>
 	
 	<div class="simple-text">
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	    <p>А Игорь отлынивает!</p>
 	</div>
 	
