--- a/GroonIndex_0.1.html
+++ b/GroonIndex_0.1.html
@@ -82,6 +82,11 @@
             <h1>Mural Game представляет!</h1>
         </div>
 
+		<a href="index.html">
+		    Вернуться на главную страницу
+		<br><br>
+		</a>
+
         <a href="victoBuilds.html">Victo билды</a>
 
         <div class="simple-text">Скачать игру:</div>
