--- a/RybalkaIndex1.html
+++ b/RybalkaIndex1.html
@@ -9,7 +9,6 @@
             src: url('static/Scabber.ttf') format('truetype');
         }
 
-        /* Фон сайта */
         body {
             background-image: url('dog.jpg');
             background-size: cover;
@@ -17,16 +16,16 @@
             background-position: center;
 
             display: flex;
-            justify-content: center;   /* центр по горизонтали */
-            align-items: center;       /* центр по вертикали */
-            min-height: 100vh;         /* растягиваем на полный экран */
+            justify-content: center;   
+            align-items: center;       
+            min-height: 100vh;         
             margin: 0;
-            text-align: center;        /* центрируем текст */
+            text-align: center;        
         }
 
-        /* Центрируем содержимое */
+
         .container {
-            background: rgba(0, 0, 0, 0.5);  /* затемнение для читаемости (можно убрать) */
+            background: rgba(0, 0, 0, 0.5);  
             padding: 20px;
             border-radius: 10px;
             max-width: 800px;
@@ -77,11 +76,15 @@
 </head>
 <body>
     <div class="container">
-
         <div class="text-blue">
             <h1>Mural Game представляет!</h1>
         </div>
-
+		
+		<a href="index.html">
+		    Вернуться на главную страницу
+		<br><br>
+		</a>
+		
         <a href="victoBuilds.html">Victo билды</a>
 
         <div class="simple-text">Скачать игру:</div>
@@ -92,8 +95,11 @@
             </a>
         </div>
 
-        <a href="RybalkaIndex2.html">Страница Stranded Fishing VI build 0.2</a>
-
+        <a href="RybalkaIndex2.html">Страница Stranded Fishing VI 0.2</a>
+		<br><br><br>
+		<a href="RybalkaIndex3.html">Страница Stranded Fishing VI 0.3</a>
+		
+		<br><br>
         <div class="simple-text"><p>О нашей игре:</p></div>
 
         <div class="simple-text">Красивые виды</div>
