--- a/RybalkaIndex2.html
+++ b/RybalkaIndex2.html
@@ -80,6 +80,11 @@
             <h1>Mural Game представляет!</h1>
         </div>
 
+		<a href="index.html">
+		    Вернуться на главную страницу
+		<br><br>
+		</a>
+
         <a href="victoBuilds.html">Victo билды</a>
 
         <div class="simple-text">Скачать игру:</div>
@@ -90,10 +95,13 @@
             </a>
         </div>
 
-        <a href="RybalkaIndex1.html">Страница Stranded Fishing VI build 0.1</a>
-		<br>
-		<a href="RybalkaIndex3.html">Страница Stranded Fishing VI build 0.3</a>
-
+        
+		
+		<a href="RybalkaIndex1.html">Страница Stranded Fishing VI 0.1</a>
+		<br><br><br>
+		<a href="RybalkaIndex3.html">Страница Stranded Fishing VI 0.3</a>
+		
+		<br><br>
         <div class="simple-text"><p>О нашей игре:</p></div>
 
         <div class="simple-text">Красивые виды</div>
