--- a/victoBuilds.html
+++ b/victoBuilds.html
@@ -21,6 +21,12 @@
 		</h1>
 		<br>
 	</div>
+	
+	<a href="index.html">
+		    Вернуться на главную страницу
+	<br><br>
+	</a>
+	
 	<div class="download">
         <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/victoBuild.rar.torrent" download class="download-link">
             Stranded Fishing VI VictoBuild
