--- a/TimofeyIndex.html
+++ b/TimofeyIndex.html
@@ -92,33 +92,20 @@
         <div class="simple-text">Скачать игру:</div>
 
         <div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/HalfBuild_1.rar" download class="download-link">
-                Half Dagger 0.1
+            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/TimofeyBuild_0.1.rar" download class="download-link">
+                Timofey Expirience 0.1
             </a>
         </div>
 		
-		<div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/HalfBuild_2.rar" download class="download-link">
-                Half Dagger 0.2
-            </a>
-        </div>
 		
-		<div class="download">
-            <a href="https://raw.githubusercontent.com/Zuza228355/site-rybalka/main/static/Builds/HalfBuild_3.rar" download class="download-link">
-                Half Dagger 0.3
-            </a>
-        </div>
 
         <div class="simple-text"><p>О нашей игре:</p></div>
 
-        <div class="simple-text">Скрытый сюжет</div>
-        <img src="static/images/HalfDagger.png">
+        <div class="simple-text">Страшная атмосфера</div>
+        <img src="static/images/Timofeybuild_img1.png">
 
-        <div class="simple-text">Реалистичные бои</div>
-        <img src="static/images/HalfDagger_1.png">
-
-        <div class="simple-text">Очень реалистичные бои</div>
-        <img src="static/images/HalfDagger_2.png">
+        <div class="simple-text">Секретная дверь</div>
+        <img src="static/images/Timofeybuild_img2.png">
 
         <div class="text-small">
             При поддержке ООО Mural Game Soft.
